# librime

./: deps.mk  install-boost-1.78.sh  install-boost.sh  install-boost_dr57.sh  install-icu4c.sh  xcode.mk
.github/workflows/: commit-ci.yml  macos-build-with-icu_dr57.yml  macos-build.yml  macos-build_dr57.yml  release-ci.yml
plugins/date_translator/: CMakeLists.txt
plugins/date_translator/src/: date_translator.cc  date_translator.h  date_translator_module.cc
plugins/oftenchar/: CMakeLists.txt
plugins/oftenchar/src/: often_charset_filter.cc  often_charset_filter.h  often_charset_filter_module.cc
plugins/oftenchar/src/v0.1/: often_charset_filter.cc  often_charset_filter.h
plugins/oftenchar/src/v0.2/: often_charset_filter.cc  often_charset_filter.h
plugins/oftenchar/src/v0.3/: often_charset_filter.cc  often_charset_filter.h
plugins/prefix_segmentor/: CMakeLists.txt
plugins/prefix_segmentor/src/: prefix_segmentor.cc  prefix_segmentor.h  prefix_segmentor_module.cc
plugins/simp_trad_conv/: CMakeLists.txt
plugins/simp_trad_conv/src/: simp_trad_conv.cc  simp_trad_conv.h  simp_trad_conv_module.cc
plugins/single_char_only/: CMakeLists.txt
plugins/single_char_only/src/: single_char_only.cc  single_char_only.h  single_char_only_module.cc
plugins/single_char_only/src/v0.1/: single_char_only.cc  single_char_only.h
plugins/speller_r/: CMakeLists.txt
plugins/speller_r/src/: speller_r.cc  speller_r.h  speller_r_module.cc
src/: rime_api.cc  rime_api.h  rime_api_impl.h
src/rime/: context.cc  context.h  engine.cc
src/rime/gear/: affix_segmentor.cc  filter_commons.cc  reverse_lookup_translator.cc  script_translator.cc  selector.cc
